# DPN-LE

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
data/general_capability/: gsm8k_test.json  hotpotqa_validation.json
data/npti_neuron_results/: Agreeableness_dict.json  Agreeableness_reversed_dict.json  Conscientiousness_dict.json  Conscientiousness_reversed_dict.json  Extraversion_dict.json  Extraversion_reversed_dict.json  Neuroticism_dict.json  Neuroticism_reversed_dict.json
data/personalitybench/: description.json
data/personalitybench/test/: Agreeableness.json  Conscientiousness.json  Extraversion.json  Neuroticism.json  Openness.json
data/steering_data/: README.md
experiments/general_capability/: evaluate_vllm.py
experiments/ipip_neo/: evaluate.py
experiments/npti_general_capability/: evaluate_vllm.py
experiments/personality_bench/: evaluate.py  score_with_gpt.py
scripts/: build_steering_data.py
src/dpn_le/: __init__.py  extract_activations.py  inference.py  ipip_neo.py  model_configs.py  personalitybench.py  pipeline.py  prepare_steering.py  utils.py  vllm_general_capability.py
