[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dpn-le"
version = "0.1.0"
description = "DPN-LE: Dual Personality Neuron Localization and Editing for Large Language Models"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
  {name = "Z1ivan"}
]
dependencies = [
  "torch>=2.0.0",
  "transformers>=4.35.0",
  "numpy>=1.24.0",
  "pandas>=2.0.0",
  "tqdm>=4.65.0",
  "xlrd>=2.0.1",
  "openpyxl>=3.1.0",
  "accelerate>=0.24.0",
  "sentencepiece>=0.1.99",
  "protobuf>=3.20.0",
]

[project.optional-dependencies]
scoring = [
  "openai>=1.0.0",
]
vllm = [
  "vllm>=0.5.0",
]

[tool.setuptools.packages.find]
where = ["src"]
